--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /build/
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
